# CarRent

./: .clangd  CMakeLists.txt  CarRent  Makefile  README.md  car_rent_analysis.md  《学术与工程实践》课程开课信息说明.doc  汽车租赁管理系统_学术与工程实践报告.docx
.trae/: build_carrent_report.py
.trae/documents/: implementation_plan.md  requirements_gap_analysis_and_plan.md
include/: auth.h  common.h  linked_list.h  logger.h  receipt.h  rent_manager.h  rent_record.h  renter.h  renter_manager.h  statistics.h  ui.h  utils.h  vehicle.h  vehicle_manager.h
school_files/: 学术与工程实践25级学生指导老师分组名单（给学生）.xls  学术工程实践I指导书（汽车租赁管理系统-孙晶老师）.doc  考核方式、提交内容、报告格式要求.doc
src/: auth.cpp  car_rent.cpp  logger.cpp  main.cpp  menu1_vehicle.cpp  menu2_renter.cpp  menu3_rent.cpp  menu4_return.cpp  menu5_query.cpp  menu6_statistics.cpp  menu7_output.cpp  menu7_system.cpp  menu8_system.cpp  menu9_extended.cpp  receipt.cpp  rent_manager.cpp  rent_record.cpp  renter.cpp  renter_manager.cpp  simple_app.cpp  statistics.cpp  ui.cpp  utils.cpp  vehicle.cpp  vehicle_manager.cpp
